--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "sleekify",
+  "name": "@spiritmonger/sleekify",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
+  "description": "<h3 align=center>\r     <img src=\"logo_sleekify.png\" alt=\"Sublime's custom image\"/>\r </h3>\r <h4 align=center>\r     <div>Typescript library that offers elegant and powerful utility functions.</div>\r </h4>",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:types",
+    "build:cjs": "tsc -p config/tsconfig.cjs.json",
+    "build:esm": "tsc -p config/tsconfig.esm.json",
+    "build:types": "tsc -p config/tsconfig.types.json",
     "test": "jest --runInBand",
     "coverage": "jest --coverage"
   },
@@ -13,8 +17,8 @@
     "type": "git",
     "url": "git+https://github.com/spiritmong3r/sleekify.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Clément Mouraut",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/spiritmong3r/sleekify/issues"
   },
@@ -48,5 +52,13 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "list",
+    "util",
+    "functional"
+  ]
 }
