--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib",
-    "strict": true
+    "rootDir": "./src",
+    "strict": true,
+    "removeComments": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   },
   "include": [
-    "src"
+    "./src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
-    "**/__tests__/*"
+    "**/*.spec.ts",
+    "./src/test"
   ]
 }
