--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@spiritmonger/sleekify",
   "version": "1.0.0",
-  "description": "<h3 align=center>\r     <img src=\"logo_sleekify.png\" alt=\"Sublime's custom image\"/>\r </h3>\r <h4 align=center>\r     <div>Typescript library that offers elegant and powerful utility functions.</div>\r </h4>",
+  "description": "Typescript library that offers elegant and powerful utility functions",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
