--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sleekify",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Typescript library that offers elegant and powerful utility functions",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -14,7 +14,8 @@
     "coverage": "jest --coverage"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
