codecov workflow test to make the upload work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,7 @@ jobs:
       - run:
           command: yarn build
           name: Build app
-      - codecov/upload
-        parameters:
+      - codecov/upload:
           file: coverage/clover.xml
 
 # Invoke jobs via workflows
