--- a/package.json
+++ b/package.json
@@ -27,18 +27,15 @@
     "url": "https://github.com/spiritmong3r/sleekify/issues"
   },
   "homepage": "https://github.com/spiritmong3r/sleekify#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@stryker-mutator/typescript-checker": "^6.0.2",
     "@stryker-mutator/core": "^6.0.2",
     "@stryker-mutator/jest-runner": "^6.0.2",
-    "@types/jest": "^27.4.1",
-    "microtime": "^3.1.0",
-    "prettier": "^2.7.1"
-  },
-  "devDependencies": {
-    "@stryker-mutator/typescript-checker": "^6.0.2",
+    "typescript": "^4.6.4",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "microtime": "^3.1.0"
   },
   "jest": {
     "moduleFileExtensions": [
