keywords added to package.json

--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
   ],
   "keywords": [
     "list",
+    "mutable",
+    "immutable",
+    "iterable operations",
+    "fluent",
     "util",
     "functional"
   ]
