qodana added to circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   node: circleci/node@5.0.2
   codecov: codecov/codecov@3.2.3
+  qodana: jetbrains/qodana@2023.2
 
 # Define a job to be invoked later in a workflow.
 jobs:
