--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
+    "coverageDirectory": "../.qodana/code-coverage/",
+    "coverageReporters": ["lcovonly"],
     "collectCoverage": true,
     "testEnvironment": "node"
   },
