--- a/package.json
+++ b/package.json
@@ -43,17 +43,11 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../.qodana/coverage-data/",
-    "coverageReporters": ["lcovonly"],
-    "collectCoverage": true,
-    "testEnvironment": "node"
+    "coverageDirectory": ".qodana/code-coverage/",
+    "coverageReporters": ["lcovonly"]
   },
   "files": [
     "dist"
