--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
       - run:
           command: yarn build
           name: Build app
+      - store_artifacts:
+          path: /.qodana/code-coverage
 #      - codecov/upload:
 #          file: coverage/clover.xml
   code-quality:
