--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ orbs:
 # Define a job to be invoked later in a workflow.
 jobs:
   build_and_test:
-    executor: node/default
+#    executor: node/default
+    machine:
+      image: 'ubuntu-2004:current'
     steps:
       - checkout
       - node/install-packages:
@@ -19,8 +21,7 @@ jobs:
       - run:
           command: yarn build
           name: Build app
-      - store_artifacts:
-          path: /.qodana/code-coverage/lcov.info
+      - qodana/scan
 #      - codecov/upload:
 #          file: coverage/clover.xml
   code-quality:
@@ -35,7 +36,7 @@ workflows:
   build_and_test-workflow:
     jobs:
       - build_and_test
-      - code-quality:
-          context: qodana
-          requires:
-            - build_and_test
+#      - code-quality:
+#          context: qodana
+#          requires:
+#            - build_and_test
